# groups-voicechat-discord

./: .gitignore  README.md  build.gradle.kts  build_and_run.sh  run_server.sh  settings.gradle.kts
.github/workflows/: nightly.yml_  release.yml  release.yml_
buildSrc/: build.gradle.kts
buildSrc/src/main/kotlin/: Properties.kt  shared-plugins.gradle.kts
core/: Cargo.toml  build.gradle.kts
core/src/main/java/dev/amsam0/voicechatdiscord/: Component.java  Constants.java  Core.java  CutawayManager.java  DiscordBot.java  GroupManager.java  LibraryLoader.java  Platform.java  SubCommands.java  VoicechatPlugin.java
core/src/main/java/dev/amsam0/voicechatdiscord/util/: PlayerPosition.java
core/src/main/rust/: audio_util.rs  lib.rs  logging.rs
core/src/main/rust/discord_bot/: discord_receive.rs  discord_speak.rs  jni.rs  jni_bridge.rs  log_in.rs  mod.rs  playout_buffer.rs  start.rs  svc_receive.rs  watchdog.rs
paper/: build.gradle.kts
paper/src/main/java/dev/amsam0/voicechatdiscord/: BukkitHelper.java  PaperPlatform.java  PaperPlugin.java
paper/src/main/java/dev/amsam0/voicechatdiscord/post_1_20_6/: Post_1_20_6_CommandHelper.java
