[package]
name = "voicechat-discord"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "src/main/rust/lib.rs"

[profile.dev]
opt-level = 0
lto = false
codegen-units = 16
incremental = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "unwind"
strip = "symbols"

[dependencies]
dashmap = "6.1.0"
discortp = "0.6.0"
eyre = "0.6.12"
flume = "0.11.1"
jni = "0.21.1"
once_cell = "1.21.4"
parking_lot = "0.12.5"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
uuid = { version = "1", features = ["v4"] }

# force using ring instead of aws-lc-rs for crypto
# if we don't specify which crashes happen
rustls = { version = "0.23.37", features = ["logging", "ring", "std", "tls12"], default-features = false }
futures-util = "0.3.32"

[dependencies.tokio]
version = "1.50.0"
features = ["rt-multi-thread", "parking_lot", "time"]

[dependencies.serenity]
version = "0.12.5"
default-features = false
# "cache" is needed to enumerate users already in a voice channel when the bot
# (re)joins, so they get bridged without waiting for their next voice state event
features = ["rustls_backend", "client", "http", "model", "cache"]

# 0.6.0 includes upstreamed DAVE (Discord E2EE voice) support from the same
# author as the previously-patched beerpsi-forks "davey" branch.
[dependencies.songbird]
version = "0.6.0"
features = ["receive"]

[dependencies.symphonia]
version = "0.5.5"
features = ["pcm"]

# Pristine songbird 0.6.0 plus a minimal fix (grep for PATCH(voicechat-discord)):
# VoiceTick packets recomputed their payload bounds from generic crypto-mode
# constants, ignoring RTP padding and the DAVE E2EE trailer -> received opus
# frames carried trailing garbage whenever a channel was end-to-end encrypted,
# silencing Discord -> Minecraft audio. Remove once fixed upstream.
[patch.crates-io]
songbird = { path = "../third_party/songbird" }
